Bug #386692 --> fix a regression from the file spec landing, pass PR_TRUE to ParseURI()

quiet a few printf's.

sr=bienvenu